<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Activity01!</string>
	<string name="app_name">APP Radio MP3</string>
	<string name="permission_request">允许蓝牙请求</string>
	<!-- 
	<string name="enable_request">You must tap on the Bluetooth icon to allow
		activating Bluetooth.</string>
	-->
	<string name="enable_request">打开蓝牙</string>
	
	<string name="discoverable_request">使设备能够被搜索</string>
    <string name="channel">Channel</string>
    <string name="preset">Preset</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="intro">Intro</string>
    <string name="rec">Rec to USB</string>
    <string name="test">Test</string>
    <string name="normal">Normal</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="af">AF</string>
    <string name="ta">TA</string>
    <string name="tp">TP</string>
    <string name="pty">PTY</string>
    <string name="music_group">Music Group</string>
    <string name="speech_group">Speech Group</string>
    <string name="eon">EON</string>
    <string name="reg">REG</string>
    <string name="ta_volume">TA Volume</string>
    <string name="ct">CT</string>
    <string name="alarm">ALARM</string>
    <string name="pi">PI</string>
    <string name="eq">EQ</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="sound">Sound</string>
    <string name="generic">Generic</string>
    <string name="sound_effect">3D Sound Effect</string>
    <string name="custom_eq">User Custom EQ</string>
    <string name="auto_eq">Auto EQ</string>
    <string name="aux">AUX</string>
    <string name="loudness">Loudness</string>
    <string name="dimmer">Dimmer</string>
    <string name="dimmer_level">Dimmer Level</string>
    <string name="bass">Bass</string>
    <string name="middle">Middle</string>
    <string name="treble">Treble</string>
    <string name="music">Music</string>
    <string name="speech">Speech</string>
    <string name="user_eq_1">User EQ 1</string>
    <string name="sound_key">Sound</string>
    <string name="eq_key">Equalize Preset</string>
    <string name="sound_effect_key">3D Sound Effect</string>
    <string name="user_eq_1_key">User EQ 1</string>
    <string name="user_eq1_bass_key">User EQ 1 Bass</string>
    <string name="user_eq1_middle_key">User EQ 1 Middle</string>
    <string name="user_eq1_treble_key">User EQ 1 Treble</string>
    <string name="auto_eq_key">Auto EQ</string>
    <string name="balance_key">Balance</string>
    <string name="fader_key">Fader</string>
    <string name="subwoofer_frequency_key">Subwoofer Frequency</string>
    <string name="subwoofer_level_key">Subwoofer Level</string>
    <string name="aux_key">AUX</string>
    <string name="loudness_key">Loudness</string>
    <string name="dimmer_key">Dimmer</string>
    <string name="dimmer_level_key">Dimmer Level</string>
    <string name="led_color_key">LED Color</string>
    <string name="beep_key">Beep</string>
    <string name="clock_format_key">Clock Format</string>
    <string name="clock_hour_key">Clock Hour</string>
    <string name="clock_min_key">Clock Min</string>
    <string name="rds_key">RDS</string>
    <string name="af_key">AF</string>
    <string name="ta_key">TA</string>
    <string name="ta_volume_key">TA Volume</string>
    <string name="pi_key">PI</string>
    <string name="ct_key">CT</string>
    <string name="alarm_key">ALARM</string>
    <string name="pty_key">PTY</string>
    <string name="music_group_key">Music Group</string>
    <string name="speech_group_key">Speech Group</string>
    <string name="eon_key">EON</string>
    <string name="reg_key">REG</string>
    <string name="generic_key">Generic</string>
    <string name="balance">Balance</string>
    <string name="fader">Fader</string>
    <string name="subwoofer_frequency">Subwoofer Frequency</string>
    <string name="subwoofer_level">Subwoofer Level</string>
    <string name="rds">RDS</string>
    <string name="MHz">MHz</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="yes">Yes</string>
    <string name="warning">Warning</string>
    <string name="no_bluetooth">No Bluetooth Adapter In Device.</string>
    <string name="enable_bluetooth_failed">Enable Bluetooth Failed.</string>
    <string name="scan_bluetooth">Scan Bluetooth</string>
    <string name="to_scan_bluetooth">To Scan Bluetooth Devices.</string>
    <string name="rescan">Rescan</string>
    <string name="scan">SCAN</string>
    <string name="connect">Connect</string>
    <string name="power_off_state">Power is off. Turn on power please.</string>
    <string name="ok">Ok</string>
    <string name="confirm_delete">To delete %1$s ?</string>
    <string name="no_usb">No USB Connect to Device!</string>
    <string name="record_init_error">Record Init Error!</string>
    <string name="init">Initializing...</string>
    <string name="setting_clock">Setting Clock</string>
    <string name="no_music">No Music</string>
    <string name="cannot_copy">Can not copy file in play!</string>
    <string name="cannot_delete">Can not delete file in play!</string>
    <string name="power_off">Power Off</string>
    <string name="exit_app">Exit App</string>
    <string name="power_off_confirm">Sure to Turn Power Off?</string>
    <string name="app_exit_confirm">Sure to Exit App?</string>
    <string name="encoding_error">Encoding Error!</string>
    <string name="reading">Reading...</string>
    <string name="no_file">No File!</string>
    <string name="no_usb_sd">No USB and SDCard Storage!</string>
    <string name="copy_destination">Copy Destination</string>
    <string name="copying">Copying</string>
    <string name="switch_usb">Switch USB</string>
    <string name="switch_usb_confirm">Sure to Switch to Next USB Storage?</string>
    <string name="scanning">Scanning</string>
    <string name="car_audio_list">Car Audio List</string>
    <string name="none_found">No Bluetooth device found.</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="not_connected">Bluetooth not connected.</string>
    <string name="channel_list">Channel List</string>
    <string name="save_destination">Save Destination</string>
    <string name="ripping">Ripping</string>
    <string name="track_list">TrackList</string>
    <string name="ripping_destination">Ripping Destination</string>
    <string name="ripping_range">Ripping Range</string>
    <string name="intro_play_range">Intro Play Range</string>
    <string name="intro_all">Intro All</string>
    <string name="intro_folder">Intro Dir</string>
    <string name="device_list">Device List</string>
    <string name="copy">Copy</string>
    <string name="copy_dest">Copy Destination</string>
    <string name="unnable_to_connect_device">Unable to connect device</string>
    <string name="device_connection_lost">Device connection was lost</string>
    <string name="connect_to_audio">Connecting to AUDIO</string>
    <string name="bugreport">"Sorry %1$s %2$s has been crashed.
        You can help to fix this bug by sending the report below to %1$s developers.
        The report will be sent by e-mail. Thank you in advance!

        "</string>
    <string name="bugreprot_mail_subject">%1$s %2$s Bug Report</string>
    <string name="app_crash">Application crash</string>
    <string name="loading">LOADING</string>
    <string name="version">Version %1$s. Powered by 东升+东辉.</string>
    <string name="sound_preferences">SOUND</string>
    <string name="title_eq_preference">EQ</string>
    <string name="summary_eq_preference">EQ</string>
    <string name="eq_dialog_title_list_preference">EQ MODE</string>
    <string name="generic_preferences">GENERIC</string>
    <string name="title_loudness_preference">Loudness</string>
    <string name="title_beep_preference">Beep</string>
    <string name="popup_menu_add">add</string>
    <string name="popup_menu_delete">Remove</string>
    <string name="alert_dialog_single_choice">Select one app</string>
    <string name="alert_dialog_single_choice_eq">Select one EQ Mode</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="capital_on">On</string>
    <string name="capital_off">Off</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="popup_menu_replace">Application</string>
</resources>
