<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/sound_preferences">

        <ListPreference
                android:key="list_preference_eq"
                android:title="@string/title_eq_preference"
                android:summary="@string/summary_eq_preference"
                android:entries="@array/eq_list_preference"
                android:entryValues="@array/eq_list_preference"
                android:dialogTitle="@string/eq_dialog_title_list_preference"/>
        <com.devin.BluetoothRadio.SeekBarPreference
                android:key="balance_preference"
                android:defaultValue="50"
                android:title="Balance"/>
        <com.devin.BluetoothRadio.SeekBarPreference
                android:key="fader_preference"
                android:defaultValue="50"
                android:title="Fader"/>
        <com.devin.BluetoothRadio.SeekBarPreferenceLight
                android:key="light_preference"
                android:defaultValue="50"
                android:title="BackLight"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/generic_preferences">

<!--        <SwitchPreference
                android:key="beep_preference"
                android:title="@string/title_beep_preference"
                android:switchTextOn="ON"
                android:switchTextOff="OFF"
                android:defaultValue="true"/>-->

        <SwitchPreference
                android:key="loudness_preference"
                android:title="@string/title_loudness_preference"
                android:switchTextOn="ON"
                android:switchTextOff="OFF"
                android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>

